# task-app-frontend

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
src/: main.rs
src/components/: container.rs  mod.rs  task.rs  taskform.rs  tasklist.rs
src/models/: task.rs
src/pages/: home.rs  mod.rs  not_found.rs  project.rs
