[package]
name = "dmo"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = {version = "0.3.0", features = ["html"] }
dioxus-router = "0.3.0"
dioxus-web = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
log = "0.4.17"
wasm-logger = "0.2.0"

